solved the twitching issue with using z-index

--- a/client/src/pages/main.css
+++ b/client/src/pages/main.css
@@ -62,6 +62,7 @@
 
 .choiceZero {
   background: lightgreen;
+  z-index: 3;
   grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 1;
@@ -77,6 +78,7 @@
 
 .choiceOne {
   background: lightgreen;
+  z-index: 3;
   grid-column-start: 2;
   grid-column-end: 3;
   grid-row-start: 2;
@@ -92,6 +94,7 @@
 
 .choiceTwo {
   background: lightgreen;
+  z-index: 3;
   grid-column-start: 3;
   grid-column-end: 4;
   grid-row-start: 3;
@@ -107,6 +110,7 @@
 
 .choiceThree {
   background: lightgreen;
+  z-index: 3;
   grid-column-start: 4;
   grid-column-end: 5;
   grid-row-start: 4;
@@ -122,6 +126,7 @@
 
 .choiceFour {
   background: lightgreen;
+  z-index: 3;
   grid-column-start: 5;
   grid-column-end: 6;
   grid-row-start: 5;
@@ -137,6 +142,7 @@
 
 .choiceFive {
   background: lightgreen;
+  z-index: 3;
   grid-column-start: 6;
   grid-column-end: 7;
   grid-row-start: 6;
